--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "cryptr": "^6.0.2",
+    "date-and-time": "^2.3.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
