Upload ke folder sukses

--- a/package.json
+++ b/package.json
@@ -17,17 +17,21 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "cryptr": "^6.0.2",
     "date-and-time": "^2.3.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^10.0.1",
     "html": "^1.0.0",
     "html-to-text": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.6",
+    "mongoose-paginate-v2": "^1.6.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodejs-nodemailer-outlook": "^1.2.4",
